# prisoner-s-dilemma

./: CMakeLists.txt  a.out  description  main.cpp  simulation.cpp  simulation.h  strategy.h  tests.cpp
lib/: CMakeLists.txt
lib/include/: mode.h  strategy.h
lib/src/: matrix.txt  mode.cpp  simulation.cpp  strategy.cpp
